--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ debug=true
 server.port=8089
 
 logging.level.com.jqprojects=debug
-logging.file.path=logs/eshop.log
+logging.file.path=logs/
 
 #DBÅäÖÃ--> ´ıÉı¼¶µ½druid
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
